--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-image: url('./img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* -------------------------------------- */
@@ -82,7 +85,8 @@ body {
 /* Chat Body */
 .chat-wrapper .chat-body {
   flex: 1;
-  overflow-y: scroll;
+  max-height: 400px;
+  padding: 0 10px;
 }
 
 .chat-wrapper .chat-body ul {
@@ -100,6 +104,7 @@ body {
   border-radius: 2px 10px 10px 10px;
   padding: .5rem 1.5rem;
   margin: .5rem 0;
+  max-width: 90%;
 }
 
 .chat-wrapper .chat-body ul li p {
@@ -135,6 +140,7 @@ body {
   border: none;
   padding: 1rem;
   border-radius: 5px 0px 0px 5px;
+  outline: none;
 }
 
 .chat-wrapper .chat-footer form button {
@@ -176,6 +182,7 @@ body {
   background-color: #F2F2F2;
   margin: 1rem 0;
   border-radius: 5px;
+  outline: none;
 }
 
 .channels-wrapper .channels-header form input::placeholder {
@@ -186,8 +193,8 @@ body {
 .channels-wrapper .channels-body {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  overflow: visible;
+  padding: 10px;
+  max-height: 400px;
 }
 
 .channels-wrapper .channels-body .channels-single {
@@ -226,4 +233,12 @@ body {
 .channels-wrapper .channels-body .info .desc {
   color: #888888;
 
+}
+
+@media screen and (max-width: 800px) {
+  .App {
+    flex-direction: column;
+    height: 100%;;
+    background-image: none;
+  }
 }
