--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@ body {
   flex-direction: column-reverse;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 .chat-wrapper .chat-body ul li {
@@ -110,7 +111,7 @@ body {
   color: #000;
   border-radius: 2px 10px 10px 10px;
   padding: .5rem 1.5rem;
-  margin: .5rem 0;
+  margin: .25rem 0;
   max-width: 90%;
 }
 
@@ -156,6 +157,7 @@ body {
   border: none;
   cursor: pointer;
   border-radius: 0px 5px 5px 0px;
+  outline: none;
 }
 
 /* -------------------------------------- */
@@ -178,7 +180,7 @@ body {
 }
 
 .channels-wrapper .channels-header h1 {
-  font-size: 2.7rem;
+  font-size: 2.65rem;
   font-weight: 500;
   margin: 0;
   margin-right: auto;
@@ -208,7 +210,7 @@ body {
   display: flex;
   height: 100%;
   flex-direction: column;
-  padding: 10px;
+  padding: 0 10px;
 }
 
 .channels-wrapper .channels-body .channels-single {
